--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: 'Graphik';
   src: url('/src/assets/fonts/Medium/Graphik-Medium.woff2') format('woff2'),
@@ -125,24 +124,24 @@ body {
   font-size: 126px;
 }
 
-.contentWraper{
+.contentWraper {
   margin-top: 45px;
   display: flex;
   flex-direction: row;
 }
 
 
-.legend{
+.legend {
   font-size: 18px;
   font-family: 'GraphikBolt';
   color: white;
 }
 
-.sliderImg{
+.sliderImg {
   width: 100%;
 }
 
-.MysliderWraper{
+.MysliderWraper {
   padding: auto;
   width: 70%;
   margin-left: 5%;
@@ -260,7 +259,7 @@ body {
   font-size: 150px;
 }
 
-.WorkPageMainWraper{
+.WorkPageMainWraper {
   position: absolute;
   left: 25px;
   right: 25px;
@@ -295,7 +294,7 @@ body {
   font-size: 85px;
 }
 
-.Font27{
+.Font27 {
   font-size: 27px;
 }
 
@@ -314,17 +313,95 @@ body {
 }
 
 @media screen and (max-width: 750px) {
-  .Button_Header{
+  .Button_Header {
     font-size: 65px !important;
     margin-bottom: 75px;
   }
-  .ContactHeader{
+
+  .ContactHeader {
     font-size: 55px !important;
   }
-  .Buttons_wraper{
+
+  .Buttons_wraper {
     margin-bottom: 55px;
   }
-  .ContactButtonsHeader{
+
+  .ContactButtonsHeader {
     font-size: 25px;
+  }
+}
+
+.AnimatedPullWraper {
+  margin-top: 25px;
+  color: white;
+  font-family: 'GraphikBolt';
+  font-size: 25px;
+  padding-left: 10%;
+}
+
+.AnimatedPull:nth-child(4n+1) {
+  animation: pull 2s ease .4s infinite;
+}
+
+
+@keyframes pull {
+  from {
+    margin-left: 0px;
+  }
+  to {
+    margin-left: -50px;
+  }
+}
+
+
+.container {
+  width: 80px;
+  height: 100px;
+  margin: 100px auto;
+  margin-top: calc(10vh / 2 - 50px);
+}
+
+.block {
+  position: relative;
+  box-sizing: border-box;
+  float: left;
+  margin: 0 1px 10px 0;
+  width: 12px;
+  height: 12px;
+  border-radius: 3px;
+  background: #FFF;
+}
+
+.block:nth-child(4n+1) {
+  animation: wave 2s ease .0s infinite;
+}
+
+.block:nth-child(4n+2) {
+  animation: wave 2s ease .2s infinite;
+}
+
+.block:nth-child(4n+3) {
+  animation: wave 2s ease .4s infinite;
+}
+
+.block:nth-child(4n+4) {
+  animation: wave 2s ease .6s infinite;
+  margin-right: 0;
+}
+
+@keyframes wave {
+  0% {
+    top: 0;
+    opacity: 1;
+  }
+
+  50% {
+    top: 30px;
+    opacity: .2;
+  }
+
+  100% {
+    top: 0;
+    opacity: 1;
   }
 }
