--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,12 @@ body {
   background-color: black;
 }
 
+.githubIcon{
+  width: 75px;
+  height: 75px;
+  margin-left: 10%;
+}
+
 .ContactHeaderWraper {
   margin-top: 75px;
   margin-bottom: 75px;
