--- a/src/index.css
+++ b/src/index.css
@@ -335,7 +335,7 @@ a {
     margin-top: 0px !important;
   }
   .AboutHeader{
-    margin-top: 2000px !important;
+    margin-top: 20vh !important;
   }
   
 }
